# junefeed

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  lint_and_format.yml  test.yml
junefeed/: app.py  config.py  feed.py  main.py
src/junefeed/: __init__.py  app.py  config.py  feed.py  main.py  state.py
tests/: test_feed.py
