[project]
name = "junefeed"
version = "0.1.0"
description = "A statefull RSS reader."
readme = "README.md"
authors = [
    { name = "Jonathan Wells", email = "jonwells90@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "feedparser>=6.0.11",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "textual>=3.4.0",
]

[project.scripts]
june = "junefeed:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.hatch.build]
# include = ["junefeed"]
#
[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.0",
]

[tool.ruff.format]
quote-style = "single"

[tool.uv.workspace]
members = [
    "tmp",
]
